src/routes/styles.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--font-body: 'Nunito', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
	--font-mono: 'JetBrains Mono', 'Fira Mono', monospace;
	--color-bg-0: rgb(202, 216, 228);
	--color-bg-1: hsl(209, 36%, 86%);
	--color-bg-2: hsl(224, 44%, 95%);
	--color-theme-1: #ff3e00;
	--color-theme-2: #4075a6;
	--color-text: rgb(24, 24, 24);
	--column-width: 42rem;
	--column-margin-top: 4rem;
	font-family: var(--font-body);
	color: var(--color-text);
	--color-pink: #ec018b;
	--color-pink-light: rgba(236, 1, 139, 0.75);
	--color-sub-pink: #ee2e63;
	--code-bg: #fff;
	-webkit-font-smoothing: antialiased;
}

.tooltip-success {
	--tooltip-text-color: white;
}

html {
	scroll-behavior: smooth;
}

html, #root, body, .app {
	width: 100%;
	background-color: #f0f0f0;
}

@media (min-width: 1150px) {
	body, #main-page {
		min-height: 100vh;
	}
}

button, div, a, pre, code, .code-wrapper, .copy-button {
	transition: all 0.2s cubic-bezier(.32,.08,.24,1);
}

*::-webkit-scrollbar-track {
	background: #f0f0f0;
}

*::-webkit-scrollbar {
	width: 16px;
}


*::-webkit-scrollbar-thumb {
	height: 56px;
	border-radius: 8px;
	border: 4px solid transparent;
	background-clip: content-box;
	background-color: #888;
}

*::-webkit-scrollbar-thumb:hover {
	background-color: #555;
}


.preview-img {
	background-size: cover;
	background-position: center;
	overflow: hidden;
	width: 100%;
	height: 100%;
}

.img-cover-container {
	width: 100%;
	height: 100%;
	overflow: hidden;
	position: relative;
}

@media (max-width: 1150px) {
	.img-cover-container {
		min-height: 18rem;
	}
}

.img-cover-container img {
	position: absolute;
	top: 50%;
	left: 50%;
	width: auto;
	height: auto;
	min-width: 100%;
	min-height: 100%;
	transform: translate(-50%, -50%);
}

.copy-button {
	z-index: 2;
	padding: 0.5rem;
	height: auto;
	width: auto;
	border-radius: 0.5rem;
	cursor: pointer;
	color: black;
	border: 1px solid rgba(0, 0, 0, 0.1);

	font-size: 0.95rem;
}

.code-header {
	font-family: var(--font-body);
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
}

.language-heading {
	font-size: 1.125rem;
	line-height: 1.75rem;
	color: var(--color-text);
	text-transform: capitalize;
	padding: 0.2rem 1rem;
	border-block-end: 1px solid hsl(92deg 28% 65%);
}

.code-wrapper {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 1rem;
	width: 100%;
	overflow: auto;
	border: 1px solid rgb(231, 231, 231);
	border-radius: 0.5rem;
	background-color: var(--code-bg);
	margin-bottom: 1rem;
}

.code-wrapper > pre {

	background-color: var(--code-bg) !important;
}

.code-wrapper > pre {
	width: 100%;
	margin-bottom: 0 !important;
}

.code-wrapper:hover {
	border: 1px solid rgb(73, 73, 73);
}

.copy-button:hover {
	background: rgba(200, 200, 200, 0.1) !important;
}


code {
	counter-reset: step;
	counter-increment: step 0;
	font-family: var(--font-mono);
}

code .line::before {
	content: counter(step);
	counter-increment: step;
	width: 1rem;
	margin-right: 1.5rem;
	display: inline-block;
	text-align: right;
	color: rgba(115, 138, 148, .4)
}


.preview-card-icon {
	width: 2.2rem;
	height: 2.2rem;
	max-width: none;
}

.card {
	backdrop-filter: blur(15px) saturate(86%);
	backface-visibility: hidden;
	transform: perspective(1px) translateZ(0);
	-webkit-font-smoothing: subpixel-antialiased;
	background: radial-gradient(circle at 100% 0, hsla(0, 0%, 100%, .95) 0, hsla(0, 0%, 96.1%, .77) 183%);
}


.article-card {
	background: white !important;
}

.article-card:hover {
	background: white !important;
	box-shadow: 0 0 5px #fff;
}

.card:hover {
	background: radial-gradient(circle at 100% 0, hsla(0, 0%, 100%, 1) 0, hsla(0, 0%, 98%, 0.87) 183%);
}


@media (min-width: 1150px) {
	.card-scale:hover {
		--tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / .03)) drop-shadow(0 8px 5px rgb(0 0 0 / .08));
		transform: perspective(1px) scale(1.025) translateZ(0);
	}
}

.img-view {
	max-width: 100vw;
	max-height: 100vh;
}

.long {
	width: 70% !important;
}

.llong {
	width: 80% !important;
}

.square {
	width: 85% !important;
}

@media (max-width: 1150px) {
	.long, .llong, .square {
		width: 100% !important;
	}
}

#chat-input {
	width: 32rem;
	background-color: rgba(255, 255, 255, 0.9) !important;
}

input[type="file"] {
	display: none;
}
.custom-file-upload {
	display: flex;
	cursor: pointer;
	border-radius: 50%;
	justify-content: center;
	align-items: center;
	background-color: white;
	align-self: center;
}

.chat-line{
	border-radius: 0.5rem;
	background-color: rgba(0,0,0,0.2);
}

